crates/rargs/tests/snapshots/test_scripts__stdout catch-all-global.sh multiple something.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] catch-all-global.sh multiple something"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---

args:
- rargs_input = ([0] = "something")
- rargs_message = ([0] = "something")
- rargs_other_args = ()

